Bug 343707 - kdeinit5.app fails to run
Summary: kdeinit5.app fails to run
Status: RESOLVED FIXED
Alias: None
Product: frameworks-kinit
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Other macOS
: NOR normal
Target Milestone: ---
Assignee: David Faure
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-02-02 20:29 UTC by Jeremy Whiting
Modified: 2015-02-03 19:06 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jeremy Whiting 2015-02-02 20:29:23 UTC
When trying to run kdeinit5.app on osx it complains that it can't find a few libraries (libKF5KIOCore.so.5, libKF5Parts.so.5 and libKF5Plasma.so.5) from extra_libs in kinit.cpp. 

These are wrapped in an #ifdef Q_OS_UNIX but maybe should be wrapped in #if defined(Q_OS_UNIX) && !defined(Q_OS_MAC) or something.

On the other hand if they are needed in OS X we just need to fix the libraries names for Q_OS_MAC builds.

Another issue after these is the communication with KLauncher, but that's being addressed elsewhere.

Reproducible: Always


Actual Results:  
kdeinit5 fails to run.

Expected Results:  
kdeinit5 should run
Comment 1 Marko Käning 2015-02-02 21:09:53 UTC
Jeremy's RR: https://git.reviewboard.kde.org/r/122394/
Comment 2 Jeremy Whiting 2015-02-03 12:21:36 UTC
Git commit 1924d4ad1bdcd4edc2e4308dafb8b696dfad8763 by Jeremy Whiting.
Committed on 02/02/2015 at 20:39.
Pushed by whiting into branch 'master'.

kinit: Fix library names for OSX.

REVIEW:122394

M  +8    -0    src/kdeinit/kinit.cpp

http://commits.kde.org/kinit/1924d4ad1bdcd4edc2e4308dafb8b696dfad8763