kinit: Fix library names for OSX.

REVIEW:122394
BUG:343707